Refactoring - cluster related entities moved to core module - renamed messaging module as producer module.