@@ -3,11 +3,10 @@ package com.flipkart.varadhi.services;
 import com.flipkart.varadhi.core.cluster.ConsumerApi;
 import com.flipkart.varadhi.core.cluster.ConsumerClientFactory;
 import com.flipkart.varadhi.core.cluster.ControllerRestApi;
+import com.flipkart.varadhi.core.cluster.entities.ShardAssignments;
 import com.flipkart.varadhi.core.cluster.entities.ShardDlqMessageResponse;
 import com.flipkart.varadhi.entities.*;
 import com.flipkart.varadhi.entities.cluster.Assignment;
-import com.flipkart.varadhi.entities.cluster.DlqMessage;
-import com.flipkart.varadhi.entities.cluster.ShardAssignments;
 import com.flipkart.varadhi.entities.cluster.SubscriptionOperation;
 import com.flipkart.varadhi.exceptions.InvalidOperationForResourceException;
 import com.flipkart.varadhi.web.admin.SubscriptionTestBase;
@@ -45,7 +44,7 @@ class DlqServiceTest extends SubscriptionTestBase {
 
     @Test
     void testUnsideline() {
-        VaradhiTopic vTopic = VaradhiTopic.of(topicResource);
+        VaradhiTopic vTopic = topicResource.toVaradhiTopic();
         VaradhiSubscription subscription = spy(getUngroupedSubscription("sub12", project, vTopic));
         UnsidelineRequest unsidelineRequest = UnsidelineRequest.ofFailedAt(System.currentTimeMillis());
         String requestedBy = "testUser";
@@ -65,7 +64,7 @@ class DlqServiceTest extends SubscriptionTestBase {
 
     @Test
     void testUnsidelineInvalidState() {
-        VaradhiTopic vTopic = VaradhiTopic.of(topicResource);
+        VaradhiTopic vTopic = topicResource.toVaradhiTopic();
         VaradhiSubscription subscription = spy(getUngroupedSubscription("sub12", project, vTopic));
         when(subscription.isWellProvisioned()).thenReturn(false);
         InvalidOperationForResourceException exception = assertThrows(
@@ -104,7 +103,6 @@ class DlqServiceTest extends SubscriptionTestBase {
         long earliestFailedAt = System.currentTimeMillis();
         int limit = 10;
         VaradhiSubscription subscription = setupSubscriptionForGetMessages();
-        List<DlqMessage> shard1Messages = List.of(getDlqMessage(1), getDlqMessage(2), getDlqMessage(1));
 
         doReturn(CompletableFuture.completedFuture(new ShardDlqMessageResponse(new ArrayList<>(), null))).when(
                 consumerClient).getMessagesByTimestamp(anyLong(), anyInt());
@@ -115,7 +113,7 @@ class DlqServiceTest extends SubscriptionTestBase {
                 dlqService.getMessages(subscription, earliestFailedAt, pageMarkers, limit, recordWriter);
         assertValue(null, result);
         assertEquals(1, msgRespones.size());
-        assertTrue(msgRespones.get(0).getMessages().isEmpty());
+        assertTrue(msgRespones.getFirst().getMessages().isEmpty());
     }
 
     @Test
@@ -131,12 +129,12 @@ class DlqServiceTest extends SubscriptionTestBase {
                 dlqService.getMessages(subscription, earliestFailedAt, pageMarkers, limit, recordWriter);
         assertException(result, IllegalArgumentException.class, "Consumer not found for");
         assertEquals(1, msgRespones.size());
-        assertTrue(msgRespones.get(0).getError().contains("Consumer not found for"));
+        assertTrue(msgRespones.getFirst().getError().contains("Consumer not found for"));
     }
 
     @Test
     void testGetMessagesInvalidState() {
-        VaradhiTopic vTopic = VaradhiTopic.of(topicResource);
+        VaradhiTopic vTopic = topicResource.toVaradhiTopic();
         VaradhiSubscription subscription = spy(getUngroupedSubscription("sub12", project, vTopic));
         when(subscription.isWellProvisioned()).thenReturn(false);
         InvalidOperationForResourceException exception = assertThrows(
@@ -160,7 +158,7 @@ class DlqServiceTest extends SubscriptionTestBase {
                 dlqService.getMessages(subscription, System.currentTimeMillis(), pageMarkers, 10, recordWriter);
         assertException(result, IllegalArgumentException.class, "Subscription not found");
         assertEquals(1, msgRespones.size());
-        assertTrue(msgRespones.get(0).getError().contains("Subscription not found"));
+        assertTrue(msgRespones.getFirst().getError().contains("Subscription not found"));
     }
 
     @Test
@@ -174,14 +172,14 @@ class DlqServiceTest extends SubscriptionTestBase {
                 dlqService.getMessages(subscription, System.currentTimeMillis(), pageMarkers, 10, recordWriter);
         assertValue(null, result);
         assertEquals(1, msgRespones.size());
-        assertTrue(msgRespones.get(0).getMessages().isEmpty());
-        assertNull(msgRespones.get(0).getError());
-        assertNull(msgRespones.get(0).getNextPage());
+        assertTrue(msgRespones.getFirst().getMessages().isEmpty());
+        assertNull(msgRespones.getFirst().getError());
+        assertNull(msgRespones.getFirst().getNextPage());
     }
 
     private VaradhiSubscription setupSubscriptionForGetMessages() {
         String consumerId = "consumerId";
-        VaradhiTopic vTopic = VaradhiTopic.of(topicResource);
+        VaradhiTopic vTopic =  topicResource.toVaradhiTopic();
         VaradhiSubscription subscription = spy(getUngroupedSubscription("sub12", project, vTopic));
         SubscriptionShards shards = subscription.getShards();
         List<Assignment> assignments = new ArrayList<>();
